Fixed package.json, removed unnecessary utils files

--- a/packages/transit/static/transit.css
+++ b/packages/transit/static/transit.css
@@ -92,19 +92,34 @@ video {
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 body {
   line-height: 1;
 }
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
-blockquote:before, blockquote:after, q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: '';
   content: none;
 }
@@ -115,14 +130,17 @@ table {
 
 /* end of reset */
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 /* disable scroll bounce on Mac OS X & iOS */
-body, html {
+body,
+html {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -136,11 +154,13 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
-body, select {
+body,
+select {
   margin: 0;
 }
 
-a, a:visited {
+a,
+a:visited {
   color: #00a;
 }
 
@@ -180,7 +200,8 @@ h4 {
   width: 100%;
 }
 
-.loading, .error {
+.loading,
+.error {
   position: absolute;
   top: 10px;
   left: 50%;
@@ -270,7 +291,7 @@ table.tooltip tr:nth-child(even) {
 }
 
 .gradient .label {
-  color: #A2A2A2;
+  color: #a2a2a2;
   flex: 1;
   font-weight: 500;
   text-align: center;
@@ -289,7 +310,7 @@ table.tooltip tr:nth-child(even) {
 }
 
 .routing-settings .label {
-  color: #546E7A;
+  color: #546e7a;
 }
 
 .routing-settings .value {
@@ -297,16 +318,16 @@ table.tooltip tr:nth-child(even) {
 }
 
 .routing-settings .value.secondary {
-  color: #CFD8DC;
+  color: #cfd8dc;
 }
 
 .routing-settings .value.mismatch {
-  color: #93345D;
+  color: #93345d;
 }
 
 .routing-settings .header {
   color: #005378;
-  background-color: #D3DBE2;
+  background-color: #d3dbe2;
 }
 
 .routing-settings form {
@@ -343,8 +364,8 @@ table.tooltip tr:nth-child(even) {
 }
 
 .routing-settings .row.target-address {
-  color: #FFF;
-  background-color: #607D8B;
+  color: #fff;
+  background-color: #607d8b;
 }
 
 .routing-settings select {
@@ -360,7 +381,8 @@ table.tooltip tr:nth-child(even) {
   display: inline-block;
 }
 
-.routing-settings.compare-settings, .routing-settings.compare-origin {
+.routing-settings.compare-settings,
+.routing-settings.compare-origin {
   width: 440px;
 }
 
@@ -377,25 +399,26 @@ table.tooltip tr:nth-child(even) {
 }
 
 .routing-settings.compare-settings .header .secondary {
-  background-color: #FFC6C4;
-  color: #93345D;
+  background-color: #ffc6c4;
+  color: #93345d;
 }
 
 .routing-settings.compare-origin .header .secondary {
-  background-color: #F5DFCE;
+  background-color: #f5dfce;
   color: #e76400;
   flex: 1;
 }
 
 .routing-settings.compare-origin .row .route.secondary {
-  background-color: #FBF1EA;
+  background-color: #fbf1ea;
 }
 
 .routing-settings.compare-settings .row .route.secondary {
-  background-color: #FFF7F7;
+  background-color: #fff7f7;
 }
 
-.transit-connector, .walk {
+.transit-connector,
+.walk {
   display: inline-block;
   width: 15px;
   height: 15px;
@@ -407,10 +430,11 @@ table.tooltip tr:nth-child(even) {
 
 .walk {
   background-image: url('walk.png');
-  opacity: .5;
+  opacity: 0.5;
 }
 
-.route-symbol, .route-name {
+.route-symbol,
+.route-name {
   display: inline-block;
   min-width: 20px;
   height: 20px;
@@ -448,8 +472,8 @@ table.tooltip tr:nth-child(even) {
 }
 
 .mode-switch.compare-settings {
-  background-color: #FFC6C4;
-  color: #93345D;
+  background-color: #ffc6c4;
+  color: #93345d;
 }
 
 .mode-switchers-container {
@@ -461,7 +485,7 @@ span.close-button {
   color: white;
   font-weight: normal;
   cursor: pointer;
-  opacity: .7;
+  opacity: 0.7;
 }
 span.close-button:hover {
   opacity: 1;
@@ -493,20 +517,27 @@ span.close-button:hover {
   height: 16px;
   flex: 1 0 20px;
 }
-.legend, .routing-settings {
+.legend,
+.routing-settings {
   background-color: rgb(255, 255, 255);
 }
-.legend, .routing-settings, .mode-switch.compare-origin, .mode-switch.compare-settings {
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, .2);
+.legend,
+.routing-settings,
+.mode-switch.compare-origin,
+.mode-switch.compare-settings {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
-.label-top, .swatches, .label-bottom {
+.label-top,
+.swatches,
+.label-bottom {
   display: flex;
   justify-content: space-between;
 }
 .swatches {
-  border: 1px solid #CFD8DC;
+  border: 1px solid #cfd8dc;
 }
-.swatches, .label-bottom {
+.swatches,
+.label-bottom {
   margin-top: 4px;
 }
 
@@ -551,8 +582,8 @@ span.close-button:hover {
 
 .route-details {
   position: absolute;
-  background: #546E7A;
-  color: #FFF;
+  background: #546e7a;
+  color: #fff;
   padding: 16px;
   line-height: 1.8em;
   width: 400px;
@@ -567,11 +598,11 @@ span.close-button:hover {
 }
 
 .compare-settings .route.secondary span.commute-time {
-  color: #93345D;
+  color: #93345d;
 }
 
 .compare-origin .route.secondary span.commute-time {
-  color: #E76400;
+  color: #e76400;
 }
 
 span.commute-time {
@@ -581,7 +612,8 @@ span.commute-time {
   font-size: 14px;
 }
 
-.header.row span, .address {
+.header.row span,
+.address {
   white-space: pre-line; /* addresses include a line break between the street address and city */
 }
 .origin-address {
@@ -619,13 +651,15 @@ span.commute-time {
   font-size: 16px;
 }
 
-.scenarios .header, .scenarios .subheader {
+.scenarios .header,
+.scenarios .subheader {
   padding: 4px;
   margin-right: 12px; /* shift the "close" button over a bit. */
   max-width: 600px;
 }
 
-.prev-scenario, .next-scenario {
+.prev-scenario,
+.next-scenario {
   cursor: pointer;
   font-size: 32px;
 }
@@ -690,7 +724,9 @@ span.commute-time {
 }
 
 @media only screen and (max-device-width: 700px) {
-  .routing-settings, .compare-settings, .compare-origin {
+  .routing-settings,
+  .compare-settings,
+  .compare-origin {
     display: none;
   }
 
@@ -708,12 +744,12 @@ span.commute-time {
     display: block;
     position: absolute;
     bottom: 160px;
-    background: #FFCDD2;
+    background: #ffcdd2;
     margin: 4px;
     padding: 4px;
     left: 0;
     right: 0;
     text-align: center;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, .2);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
   }
 }
