--- a/packages/transit/static/transit.css
+++ b/packages/transit/static/transit.css
@@ -723,7 +723,9 @@ span.commute-time {
   display: none;
 }
 
-#root, .view-map, .mapboxgl-map {
+#root,
+.view-map,
+.mapboxgl-map {
   height: 100%;
 }
 
