--- a/packages/transit/static/transit.css
+++ b/packages/transit/static/transit.css
@@ -723,6 +723,12 @@ span.commute-time {
   display: none;
 }
 
+#root,
+.view-map,
+.mapboxgl-map {
+  height: 100%;
+}
+
 @media only screen and (max-device-width: 700px) {
   .routing-settings,
   .compare-settings,
