--- a/packages/transit/static/transit.css
+++ b/packages/transit/static/transit.css
@@ -729,6 +729,34 @@ span.commute-time {
   height: 100%;
 }
 
+.mapboxgl-popup-tip {
+  border-top-color: #0089f8 !important;
+}
+.mapboxgl-popup-content {
+  background-color: #0089f8 !important;
+  padding: 0 !important;
+  color: white;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.mapboxgl-popup .primary,
+.mapboxgl-popup .secondary {
+  padding: 5px 10px !important;
+}
+
+.mapboxgl-popup .primary {
+  background-color: #0089f8;
+}
+
+.mapboxgl-popup .secondary.compare-settings {
+  background-color: rgb(103, 32, 68);
+}
+
+.mapboxgl-popup .secondary.compare-origin {
+  background-color: rgb(231, 100, 0);
+}
+
 @media only screen and (max-device-width: 700px) {
   .routing-settings,
   .compare-settings,
