--- a/packages/transit/static/style/transit.css
+++ b/packages/transit/static/style/transit.css
@@ -135,11 +135,16 @@ table.tooltip tr:nth-child(even) {
 }
 
 .routing-settings .label {
-  color: #546e7a;
+  color: #333333;
+}
+
+.routing-settings {
+  font-size: 11px;
 }
 
 .routing-settings .value {
-  color: rgb(3, 103, 137);
+  color: #0072CE;
+  font-weight: 700;
 }
 
 .routing-settings .value.secondary {
@@ -256,35 +261,12 @@ span.close-button:hover {
   font-size: 18px;
 }
 
-.legend {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  z-index: 1;
-  min-width: 400px;
-  max-width: 440px;
-  padding: 16px;
-}
-
-.legend.scenarios-visible {
-  bottom: 130px; /* leave some space for the "scenarios" UI */
-}
-
 .swatch {
   display: inline-block;
   height: 16px;
   flex: 1 0 20px;
 }
-.legend,
-.routing-settings {
-  background-color: rgb(255, 255, 255);
-}
-.legend,
-.routing-settings,
-.mode-switch.compare-origin,
-.mode-switch.compare-settings {
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-}
+
 .label-top,
 .swatches,
 .label-bottom {
@@ -449,8 +431,7 @@ span.commute-time {
   position: absolute;
   top: 25px;
   left: 25px;
-  bottom: 25px;
-  background: rgb(245, 245, 245);
+  background: #EFEFEF;
   z-index: 0;
 }
 
@@ -487,46 +468,17 @@ span.commute-time {
   padding: 15px 25px;
 }
 
-@media only screen and (max-device-width: 700px) {
-  .routing-settings,
-  .compare-settings,
-  .compare-origin {
-    display: none;
-  }
-
-  .legend {
-    display: none;
-    right: 10px;
-    min-width: auto;
-  }
-
-  .scenarios {
-    height: 160px;
-  }
-
-  .mobile-warning {
-    display: block;
-    position: absolute;
-    bottom: 160px;
-    background: #ffcdd2;
-    margin: 4px;
-    padding: 4px;
-    left: 0;
-    right: 0;
-    text-align: center;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-  }
-}
-
-
 .route-clear {
   float: right;
 }
 
-.route-length-title {
-  display: block;
+.label {
   font-size: 11px;
   font-weight: 600;
+}
+
+.route-length-title {
+  display: block;
 }
 
 .route-length-time {
@@ -538,4 +490,13 @@ span.commute-time {
 .route-length-length {
   font-size: 12px;
   font-weight: 500;
+}
+
+.mode-choice {
+  background: white;
+  padding: 20px;
+}
+
+.nav-bottom {
+  padding: 20px 30px;
 }
