shrink down sprites

--- a/packages/transit/static/style/transit.css
+++ b/packages/transit/static/style/transit.css
@@ -515,123 +515,142 @@ span.commute-time {
 
 /** Sprites for travel mode */
 
-.bg-bike_blue {
+.mode-bike_blue {
   width: 35px;
   height: 19px;
   background: url('/travel-mode.png') -53px -36px;
   background-size: 195px 160px;
 }
 
-.bg-bike_green {
-  width: 70px;
-  height: 38px;
-  background: url('/travel-mode.png') -100px -134px;
+.mode-bike_green {
+  width: 35px;
+  height: 19px;
+  background: url('/travel-mode.png') -50px -67px;
+  background-size: 195px 160px;
 }
 
-.bg-bike_grey {
-  width: 70px;
-  height: 38px;
-  background: url('/travel-mode.png') -10px -134px;
+.mode-bike_grey {
+  width: 35px;
+  height: 19px;
+  background: url('/travel-mode.png') -5px -67px;
+  background-size: 195px 160px;
 }
 
-.bg-bike_icon_white {
-  width: 56px;
-  height: 30px;
-  background: url('/travel-mode.png') -272px -10px;
+.mode-bike_icon_white {
+  width: 28px;
+  height: 15px;
+  background: url('/travel-mode.png') -136px -5px;
+  background-size: 195px 160px;
 }
 
-.bg-bikeshare_green {
-  width: 76px;
-  height: 42px;
-  background: url('/travel-mode.png') -10px -10px;
-}
-
-.bg-bikeshare_grey {
-  width: 76px;
-  height: 42px;
-  background: url('/travel-mode.png') -106px -10px;
-}
-
-.bg-bikeshare_blue {
-  width: 76px;
-  height: 42px;
-  background: url('/travel-mode.png') -10px -72px;
-}
-
-.bg-bikeshare_icon_white {
-  width: 52px;
-  height: 28px;
-  background: url('/travel-mode.png') -272px -60px;
-}
-
-.bg-bus_blue {
+.mode-bikeshare_green {
   width: 38px;
-  height: 50px;
-  background: url('/travel-mode.png') -196px -192px;
+  height: 21px;
+  background: url('/travel-mode.png') -5px -5px;
+  background-size: 195px 160px;
 }
 
-.bg-bus_green {
+.mode-bikeshare_grey {
   width: 38px;
-  height: 50px;
-  background: url('/travel-mode.png') -80px -192px;
+  height: 21px;
+  background: url('/travel-mode.png') -53px -5px;
+  background-size: 195px 160px;
 }
 
-.bg-bus_grey {
+.mode-bikeshare_blue {
   width: 38px;
-  height: 50px;
-  background: url('/travel-mode.png') -138px -192px;
+  height: 21px;
+  background: url('/travel-mode.png') -5px -36px;
+  background-size: 195px 160px;
 }
 
-.bg-bus_icon_white {
-  width: 32px;
-  height: 38px;
-  background: url('/travel-mode.png') -348px -10px;
+.mode-bikeshare_icon_white {
+  width: 26px;
+  height: 14px;
+  background: url('/travel-mode.png') -136px -30px;
+  background-size: 195px 160px;
 }
 
-.bg-walk_blue {
-  width: 30px;
-  height: 48px;
-  background: url('/travel-mode.png') -272px -108px;
+.mode-bus_blue {
+  width: 19px;
+  height: 25px;
+  background: url('/travel-mode.png') -98px -96px;
+  background-size: 195px 160px;
 }
 
-.bg-walk_green {
-  width: 30px;
-  height: 48px;
-  background: url('/travel-mode.png') -272px -176px;
+.mode-bus_green {
+  width: 19px;
+  height: 25px;
+  background: url('/travel-mode.png') -40px -96px;
+  background-size: 195px 160px;
 }
 
-.bg-walk_icon_white {
-  width: 24px;
-  height: 34px;
-  background: url('/travel-mode.png') -348px -68px;
+.mode-bus_grey {
+  width: 19px;
+  height: 25px;
+  background: url('/travel-mode.png') -69px -96px;
+  background-size: 195px 160px;
 }
 
-.bg-walk_grey {
-  width: 30px;
-  height: 48px;
-  background: url('/travel-mode.png') -10px -262px;
+.mode-bus_icon_white {
+  width: 16px;
+  height: 19px;
+  background: url('/travel-mode.png') -174px -5px;
+  background-size: 195px 160px;
 }
 
-.bg-wc_blue {
-  width: 50px;
-  height: 50px;
-  background: url('/travel-mode.png') -10px -192px;
+.mode-walk_blue {
+  width: 15px;
+  height: 24px;
+  background: url('/travel-mode.png') -136px -54px;
+  background-size: 195px 160px;
 }
 
-.bg-wc_green {
-  width: 50px;
-  height: 50px;
-  background: url('/travel-mode.png') -202px -80px;
+.mode-walk_green {
+  width: 15px;
+  height: 24px;
+  background: url('/travel-mode.png') -136px -88px;
+  background-size: 195px 160px;
 }
 
-.bg-wc_grey {
-  width: 50px;
-  height: 50px;
-  background: url('/travel-mode.png') -202px -10px;
+.mode-walk_icon_white {
+  width: 12px;
+  height: 17px;
+  background: url('/travel-mode.png') -174px -34px;
+  background-size: 195px 160px;
 }
 
-.bg-wc_icon_white {
-  width: 34px;
-  height: 36px;
-  background: url('/travel-mode.png') -60px -262px;
+.mode-walk_grey {
+  width: 15px;
+  height: 24px;
+  background: url('/travel-mode.png') -5px -131px;
+  background-size: 195px 160px;
+}
+
+.mode-wc_blue {
+  width: 25px;
+  height: 25px;
+  background: url('/travel-mode.png') -5px -96px;
+  background-size: 195px 160px;
+}
+
+.mode-wc_green {
+  width: 25px;
+  height: 25px;
+  background: url('/travel-mode.png') -101px -40px;
+  background-size: 195px 160px;
+}
+
+.mode-wc_grey {
+  width: 25px;
+  height: 25px;
+  background: url('/travel-mode.png') -101px -5px;
+  background-size: 195px 160px;
+}
+
+.mode-wc_icon_white {
+  width: 17px;
+  height: 18px;
+  background: url('/travel-mode.png') -30px -131px;
+  background-size: 195px 160px;
 }
